# Simple-MPI

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md
lib/: mpi.c  mpi.h
src/: hello.c  main.c  mpi.c  my_mpirun.c
test/: test1.c  test2.c  test3.c
